# ChangeLog for games-emulation/SSNES
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  15 Jan 2011; Michał Ziąbkowski <mziab@o2.pl> SSNES-9999.ebuild:
  dodoc is still non-fatal in EAPI=3.

  15 Jan 2011; Michał Ziąbkowski <mziab@o2.pl> SSNES-9999.ebuild,
  +files/SSNES-cflags.patch:
  Fixed CFLAGS.

  15 Jan 2011; Michał Ziąbkowski <mziab@o2.pl> files/SSNES-build.patch:
  Fixed man install path.

  15 Jan 2011; Michał Ziąbkowski <mziab@o2.pl> SSNES-9999.ebuild:
  Forgot about prepgamesdirs. Not in the default src_install, so reverted the
  last change.

  15 Jan 2011; Michał Ziąbkowski <mziab@o2.pl> SSNES-9999.ebuild,
  +files/SSNES-build.patch:
  Patched build system and removed the kludge in src_install.

*SSNES-9999 (15 Jan 2011)

  15 Jan 2011; Michał Ziąbkowski <mziab@o2.pl> +SSNES-9999.ebuild,
  +metadata.xml:
  Initial ebuild. Not very pretty, but gets the job done.
