@@ -1,5 +1,5 @@
-AUX SSNES-build.patch 1040 RMD160 aa85a001ec8800348aa38a9d8ddade1231e1cba7 SHA1 00c6314eef36fd98e7f1fad329d3c3936afa4a40 SHA256 8db32a842add775c2bf0872e1a91527a52be68c8849cf14400df1c7647b56740
+AUX SSNES-build.patch 971 RMD160 b56c11a954c6ee7219196fde4bd435256fde2cd0 SHA1 212485b447bbf9dd8a6e1d7a73b4611ae491c023 SHA256 ba93cd0a821c017d5b12aaa6418078773004d8f6833265a6680bb795c78a6e64
 AUX SSNES-cflags.patch 246 RMD160 5ceb08b83b60335a523f36a63db648adb6db39ea SHA1 0dd3d31da2c5e86c190298804852aef40c6e3570 SHA256 9342390ed47909af866d9b64050cd4be8d44edf25011fa535e07a808c86c9588
-EBUILD SSNES-9999.ebuild 1229 RMD160 475b4f30d901dd4e206b53c14ebf379d7bf295d3 SHA1 495026676fa242a5a3b09f8996ad014f9fc7ed3c SHA256 caaef8c93a9fdcf8d4ab239006cf406e809dbc63bc8cbc32b61b5391d31be3ca
-MISC ChangeLog 937 RMD160 e60033abf40a78de0393c9449b8b4c6da6ba5c51 SHA1 26f50791a8177fa2acd14b3c9446380ef4e46d3a SHA256 a86d39222822f1c10f343a190943c61728deccfb7b52f240d44319c5a895e81e
-MISC metadata.xml 390 RMD160 6f2420a7c8ecfb4a37fc86530705d50ff9e12c80 SHA1 486331473ddafd6e447107cbb3fc74154eb2a497 SHA256 7033d58092be551832a29c586d6ac513ba137cedf7e01e384804e0df549514fd
+EBUILD SSNES-9999.ebuild 1352 RMD160 98f73b1e7c161779d4a8513f7989708d19e195e2 SHA1 27d0bb8ab2e6fc0c34c24c43ef030ab59e39a518 SHA256 3a284941cdd7e8e5d00995d5e2d9aa96e80a98d7a07477b880af510be180d656
+MISC ChangeLog 1104 RMD160 55e5c6ee393fdfc8eb3fb67d58c5fda351848817 SHA1 f15db7e80771a396dff3a9f05bb75521730c5f27 SHA256 61d3ff0bef5d2e6dc2bfa7ce38f3cfae0bf837042865557453f66b6f5a6a5a3d
+MISC metadata.xml 448 RMD160 b8fd7a5434e5127882382eb3c6f38ea00af0f4b9 SHA1 4aa8c98461d1bab0202441d6b6b37925adc8dd6e SHA256 666be0941f1db2197f6535a0ddacde340d33ad79b70407ddb5190846974e2c3d
