@@ -1,17 +1,16 @@
 diff --git a/Makefile b/Makefile
-index bf173a4..0511e4a 100644
+index 36b582f..42f2555 100644
 --- a/Makefile
 +++ b/Makefile
-@@ -101,9 +101,10 @@ tools/ssnes-joyconfig: $(JOYCONFIG_OBJ)
- 	@$(if $(Q), $(shell echo echo CC $<),)
- 
+@@ -113,10 +113,10 @@ tools/ssnes-joyconfig: $(JOYCONFIG_OBJ)
  install: $(TARGET)
--	install -m755 $(TARGET) $(DESTDIR)$(PREFIX)/bin 
--	install -m644 ssnes.cfg $(DESTDIR)/etc/ssnes.cfg
+ 	mkdir -p $(DESTDIR)$(PREFIX)/bin
+ 	mkdir -p $(DESTDIR)/etc
+-	mkdir -p $(DESTDIR)$(PREFIX)/share/man/man1
++	mkdir -p $(DESTDIR)/usr/share/man/man1
+ 	install -m755 $(TARGET) $(DESTDIR)$(PREFIX)/bin 
+ 	install -m644 ssnes.cfg $(DESTDIR)/etc/ssnes.cfg
 -	install -m644 docs/{ssnes,ssnes-joyconfig}.1 $(DESTDIR)$(PREFIX)/share/man/man1
-+	install -dm755 $(DESTDIR)$(PREFIX)/bin $(DESTDIR)/usr/share/man/man1
-+	install -m755 $(TARGET) $(DESTDIR)$(PREFIX)/bin
-+	install -D -m644 ssnes.cfg $(DESTDIR)/etc/ssnes.cfg
 +	install -m644 docs/{ssnes,ssnes-joyconfig}.1 $(DESTDIR)/usr/share/man/man1
  
  uninstall:
